--- a/thesis/chap5.tex
+++ b/thesis/chap5.tex
@@ -6,5 +6,5 @@
 %% prompt when you run the file main.tex through LaTeX.
 \chapter{Testing}
 \section{Existing Music}
-\section{Timing}
+\section{Timing} \label{timing}
 
