--- a/thesis/chap6.tex
+++ b/thesis/chap6.tex
@@ -5,5 +5,5 @@
 %% \files=
 %% prompt when you run the file main.tex through LaTeX.
 \chapter{Future Work}
-\section{Future Fixers}
+\section{Future Fixers} \label{futurefixers}
 
