--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -53,3 +53,9 @@
   school       = {Yale University},
   year         = 2013
  }
+ 
+@book{k160, 
+   title={Scanned sheet music of String Quartet No.7 in E-flat major, K.160/159a}, 
+   url={http://imslp.org/wiki/String_Quartet_No.7_in_E-flat_major,_K.160/159a_(Mozart,_Wolfgang_Amadeus)}, 
+   journal={IMSLP Petrucci Music Library}
+ }
